--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<header class="header">
 				<div class="overflow">
 					<div class="logo">
-						<a href="#"><img src="img/logo.png" alt="Kramer"></a>
+						<a href="#"><img src="img/Logo.png" alt="Kramer"></a>
 						<h1>Kramer</h1>
 					</div>
 					<nav class="header-navigation">
