--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 			</header>
 			<ul class="list-about">
 				<li>
-					<img src="img/services.png"alt="sevices">
+					<img src="img/Services.png"alt="sevices">
 					<h4>Services</h4>
 					<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,</p>
 				</li>
 				<li>
-					<img src="img/retina.png"alt="retina display">
+					<img src="img/Retina.png"alt="retina display">
 					<h4>Retina Display</h4>
 					<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,</p>
 				</li>
 				<li>
-					<img src="img/support.png"alt="sevices">
+					<img src="img/Support.png"alt="sevices">
 					<h4>Full Support</h4>
 					<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,</p>
 				</li>
@@ -71,12 +71,12 @@
 				</ul>
 			</nav>
 			<figure>
-				<img src="img/top-left.png" alt="">
-				<img src="img/top-middle.png" alt="">
-				<img src="img/top-right.png" alt="">
-				<img src="img/bottom-left.png" alt="">
-				<img src="img/bottom-middle.png" alt="">
-				<img src="img/bottom-right.png" alt="">
+				<img src="img/Top-Left.png" alt="">
+				<img src="img/Top-Middle.png" alt="">
+				<img src="img/Top-Right.png" alt="">
+				<img src="img/Bottom-Left.png" alt="">
+				<img src="img/Bottom-Middle.png" alt="">
+				<img src="img/Bottom-Right.png" alt="">
 			</figure>
 		</div>
 	</section>
@@ -85,22 +85,22 @@
 			<h3>Team</h3>
 			<ul class="list-team">
 				<li>
-					<img class="team-photo" src="img/cosmo.png" alt="Foto Cosmo Kramer">
+					<img class="team-photo" src="img/Cosmo.png" alt="Foto Cosmo Kramer">
 					<h5>Cosmo Kramer</h5>
 					<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,</p>
 					<a href="#">
-						<img src="img/twitter.png" alt="twitter">
+						<img src="img/Twitter.png" alt="twitter">
 					</a>
 					<a href="#">
-						<img class="icon-instagram" src="img/instagram.png" alt="instagram">
+						<img class="icon-instagram" src="img/Instagram.png" alt="instagram">
 					</a>
 				</li>
 				<li>
-					<img class="team-photo" src="img/george.png" alt="Foto George Constanza">
+					<img class="team-photo" src="img/George.png" alt="Foto George Constanza">
 					<h5>George Constanza</h5>
 					<p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,</p>
 					<a href="#">
-						<img src="img/twitter.png" alt="twitter">
+						<img src="img/Twitter.png" alt="twitter">
 					</a>
 				</li>
 			</ul>
@@ -129,7 +129,7 @@
 	</section>
 	<footer class="site-bottom">
 		<div class="wrapper">
-			<a class="footer-logo" href="#"><img src="img/logo.png" alt="Kramer"></a>
+			<a class="footer-logo" href="#"><img src="img/Logo.png" alt="Kramer"></a>
 			<address>129 West 81st Street New York, NY 10024</address>
 			<div class="communication">
 				<a href="mailto:giddyup@kramer.com">giddyup@kramer.com</a>
