--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
 			</div>
 			<div class="social-network">
 				<a href="#">
-					<img src="img/twitter.png" alt="twitter">
+					<img src="img/Twitter.png" alt="twitter">
 				</a>
 				<a href="#">
-					<img src="img/facebook.png" alt="instagram">
+					<img src="img/Facebook.png" alt="instagram">
 				</a>
 				<a href="#">
-					<img src="img/instagram.png" alt="instagram">
+					<img src="img/Instagram.png" alt="instagram">
 				</a>
 			</div>
 		</div>
