--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 			</nav>
 			<figure>
 				<img src="img/Top-Left.png" alt="">
-				<img src="img/Top-Middle.png" alt="">
-				<img src="img/Top-Right.png" alt="">
+				<img src="img/Top-middle.png" alt="">
+				<img src="img/Top-right.png" alt="">
 				<img src="img/Bottom-Left.png" alt="">
 				<img src="img/Bottom-Middle.png" alt="">
 				<img src="img/Bottom-Right.png" alt="">
